--- a/saat-ekrani/index.html
+++ b/saat-ekrani/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/style.css">
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container">
+      <div class="greeting" id="greeting"></div>
+      <div class="clock" id="clock"></div>
+    <div class="footer" id="footer"></div>
+  </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
